2019. 9.23. Reflected renaming of zListSize. [zeo_vec3d_list, zeo_vec3d_pca, zeo_elem_list, zeo_ph_stl, zeo_shape_sphere, zeo_bv_ch2, zeo_bv_bball, zeo_bv_qhull, zeo_brep]
2019. 9.19. Modified zeo_stlconv. [app]
2019. 9.19. Added zShape3DReadZTK and zShape3DWriteZTK. [zeo_shape]
2019. 9.19. Modified specification of zShape3DRegZTK to accept a tag. [zeo_shape]
2019. 9.19. Reflected renaming of ZTKEval. [zeo_optic]
2019. 9.19. Renamed zMShape3DFPrint, zMShape3DScanZTK and zMShape3DPrintZTK to zMShape3DFPrintZTK, zMShape3DReadZTK and zMShape3DWriteZTK, respectively. [zeo_mshape, app]
2019. 9.19. Abolished zMShape3DFScan. [zeo_mshape]
2019. 9.19. Renamed zShapeListCellFPrint and zShapeListFPrint to zShapeListCellFPrintZTK and zShapeListFPrintZTK, respectively. [zeo_shape_list]
2019. 9.19. Renamed _zShape3D*FPrint to _zShape3D*FPrintZTK of subclasses of zShape3D. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
2019. 9.19. Abolished *FScan of shape classes. [zeo_shape_box, zeo_shape_sphere, zeo_shape_cyl, zeo_shape_cone, zeo_shape_ellips, zeo_shape_ecyl]
2019. 9.19. Renamed zShape3DFPrint to zShape3DFPrintZTK. [zeo_shape, zeo_mshape]
2019. 9.19. Abolished zShape3DFScan. [zeo_shape]
2019. 9.19. Renamed _fprint member of zShape3D to _fprintZTK and abolished _fscan member. [zeo_shape]
2019. 9.19. Renamed zPH3DFPrint to zPH3DFPrintZTK. [zeo_ph, app]
2019. 9.19. Abolished zPH3DFScan. [zeo_ph]
2019. 9.19. Renamed zOpticalInfoFPrint to zOpticalInfoFPrintZTK. [zeo_optic]
2019. 9.19. Abolished zOpticalInfoFScan. [zeo_optic]
2019. 9.18. Renamed zNURBS3DFPrint to zNURBS3DFPrintZTK. [zeo_nurbs]
2019. 9.18. Abolished zNURBS3DFScan. [zeo_nurbs]
2019. 9.18. Modified specifications of zMat2DFPrint, zMat3DFPrint and zMat6DFPrint. [zeo_mat2d, zeo_mat3d, zeo_mat6d]
2019. 9.18. Added zMapNetWriteZTK. [zeo_mapnet]
2019. 9.18. Renamed zMapNetFPrint to zMapNetFPrintZTK. [zeo_mapnet]