@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.4.9
+VERSION=1.4.10
 
-DEPENDENCY="zeda=1.2.19;zm=1.2.9"
+DEPENDENCY="zeda=1.2.19;zm=1.2.14"
